--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="caixa-principal">
         <h1>Você decide o futuro do IA</h1>
-        <div class="caixa-perguntas">
+        <div class="caixa-pergunta">
             Você já sabe quais são as perguntas que irão nortear sua missão ?
         </div>
-        <div class="caixa-alternativas">
+        <div class="caixa-alternativa">
             <button>Sim, eu já sei</button>
             <button>Não, estou ajustando algumas coias</button>
         </div>
