--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="caixa-principal">
         <h1>Você decide o futuro do IA</h1>
-        <div class="caixa-pergunta">
+        <div class="caixa-perguntas">
             Você já sabe quais são as perguntas que irão nortear sua missão ?
         </div>
-        <div class="caixa-alternativa">
+        <div class="caixa-alternativas">
             <button>Sim, eu já sei</button>
             <button>Não, estou ajustando algumas coias</button>
         </div>
@@ -22,6 +22,6 @@
             </p>
         </div>
     </div>
-    <script scr="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
